--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "program": "${workspaceFolder}/codes/bin/stop",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${fileDirname}",
+            "cwd": "${workspaceFolder}/codes",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
@@ -34,7 +34,7 @@
             "program": "${workspaceFolder}/codes/bin/stop",
             "args": [],
             "stopAtEntry": false,
-            "cwd": "${fileDirname}",
+            "cwd": "${workspaceFolder}/codes",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
